Fixed mobile header/nav on mobile. Changed colour of hamburger.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   display: grid;
-  grid-template-rows: 100px 0 1fr minmax(100px, auto);
+  grid-template-rows: minmax(100px, auto) 0 1fr minmax(100px, auto);
   min-height: 100vh;
   overflow-x: hidden;
   &.container--homepage {
