--- a/src/app/hamburger/hamburger.component.scss
+++ b/src/app/hamburger/hamburger.component.scss
@@ -2,8 +2,11 @@
 
 .hamburger {
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 16px;
+  top: 16px;
+  height: 25px;
+  width: 25px;
+
   z-index: 1;
   cursor: pointer;
   > span {
@@ -14,36 +17,36 @@
     margin-left: auto;
     width: 25px;
     height: 2px;
-    background-color: var(--color-primary);
+    background-color: var(--color-white);
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
   }
   &.is-active {
     position: fixed;
     > span:nth-child(1) {
       transform: translateY(6px) rotate(45deg);
-      background-color: var(--color-primary);
+      background-color: var(--color-black);
     }
     > span:nth-child(2) {
       opacity: 0;
     }
     > span:nth-child(3) {
       transform: translateY(-6px) rotate(-45deg);
-      background-color: var(--color-primary);
+      background-color: var(--color-black);
     }
   }
   .header--overlay & {
     > span {
-      background-color: var(--color-white);
+      background-color: var(--color-black);
     }
     &.is-active {
       > span:nth-child(1) {
-        background-color: var(--color-primary);
+        background-color: var(--color-black);
       }
       > span:nth-child(2) {
         opacity: 0;
       }
       > span:nth-child(3) {
-        background-color: var(--color-primary);
+        background-color: var(--color-black);
       }
     } //TODO: Active state color should be picked up from `header.scss`
   }
