--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -32,20 +32,18 @@
     padding: var(--spacing-medium);
   }
   &__nav {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     z-index: 1;
     visibility: hidden;
     background-color: var(--color-white);
-    padding-top: var(--spacing-huge);
     &.is-active {
       display: grid;
       align-content: start;
       grid-row-gap: var(--spacing-medium);
       position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
       visibility: visible;
     }
     @media (min-width: $bp-md) {
@@ -75,11 +73,15 @@
   &__logo-link {
     display: grid;
     place-items: center;
-    width: 200px;
+    width: 150px;
     height: 100px;
+    z-index: 1;
+    @media (min-width: $bp-md) {
+      width: 200px;
+    }
   }
   &__menu {
-    display: grid;
+    display: none;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     grid-row-gap: var(--spacing-medium);
@@ -89,6 +91,7 @@
     margin: 0;
     @media (min-width: $bp-md) {
       grid-row-gap: 0;
+      display: grid;
     }
     .header__nav.is-active & {
       display: grid;
